# framework.web.wearable.wrt-plugins-tizen

./: .gitignore  CMakeLists.txt  Doxyfile  clean.sh
src/Alarm/: AlarmAbsolute.cpp  AlarmAbsolute.h  AlarmConverter.cpp  AlarmConverter.h  AlarmRelative.cpp  AlarmRelative.h  AlarmUtil.cpp  AlarmUtil.h  CMakeLists.txt  JSAlarmAbsolute.cpp  JSAlarmAbsolute.h  JSAlarmManager.cpp  JSAlarmManager.h  JSAlarmRelative.cpp  JSAlarmRelative.h  alarm_common.h  config.xml  plugin_config.cpp  plugin_config.h  plugin_config_impl.h  plugin_initializer.cpp
src/Application/: AppManagerWrapper.cpp  AppManagerWrapper.h  Application.cpp  Application.h  ApplicationAsyncCallbackManager.cpp  ApplicationAsyncCallbackManager.h  ApplicationCert.cpp  ApplicationCert.h  ApplicationContext.cpp  ApplicationContext.h  ApplicationControl.cpp  ApplicationControl.h  ApplicationControlData.cpp  ApplicationControlData.h  ApplicationController.cpp  ApplicationController.h  ApplicationConverter.cpp  ApplicationConverter.h  ApplicationFactory.cpp  ApplicationFactory.h  ApplicationInformation.cpp  ApplicationInformation.h  ApplicationInformationEventPrivateData.h  ApplicationListenerManager.cpp  ApplicationListenerManager.h  ApplicationManager.cpp  ApplicationManager.h  ApplicationMetaData.cpp  ApplicationMetaData.h  ApplicationUtil.cpp  ApplicationUtil.h  CMakeLists.txt  EventApplicationAddAppInfoEventListener.h  EventApplicationAppInfoEventListener.h  EventApplicationFindAppControl.h  EventApplicationGetAppCerts.h  EventApplicationGetAppContext.h  EventApplicationGetAppInfo.h  EventApplicationGetAppSharedURI.h  EventApplicationGetAppsContext.h  (+36 more)
src/Archive/: CMakeLists.txt  config.xml
src/Badge/: BadgeManager.cpp  BadgeManager.h  BadgeUtil.cpp  BadgeUtil.h  CMakeLists.txt  JSBadgeManager.cpp  JSBadgeManager.h  config.xml  plugin_config.cpp  plugin_config.h  plugin_initializer.cpp
src/Bluetooth/: BluetoothAdapter.cpp  BluetoothAdapter.h  BluetoothCallback.cpp  BluetoothCallback.h  BluetoothCallbackUtil.cpp  BluetoothCallbackUtil.h  BluetoothClass.cpp  BluetoothClass.h  BluetoothClassDeviceMajor.cpp  BluetoothClassDeviceMajor.h  BluetoothClassDeviceMinor.cpp  BluetoothClassDeviceMinor.h  BluetoothClassDeviceService.cpp  BluetoothClassDeviceService.h  BluetoothConverter.cpp  BluetoothConverter.h  BluetoothDevice.cpp  BluetoothDevice.h  BluetoothGATTBase.cpp  BluetoothGATTBase.h  BluetoothGATTCharacteristic.cpp  BluetoothGATTCharacteristic.h  BluetoothGATTDescriptor.cpp  BluetoothGATTDescriptor.h  BluetoothGATTService.cpp  BluetoothGATTService.h  BluetoothGattClientWrapper.cpp  BluetoothGattClientWrapper.h  BluetoothHealthApplication.cpp  BluetoothHealthApplication.h  BluetoothHealthChannel.cpp  BluetoothHealthChannel.h  BluetoothHealthProfileHandler.cpp  BluetoothHealthProfileHandler.h  BluetoothHealthProfileHandlerCallback.cpp  BluetoothHealthProfileHandlerCallback.h  BluetoothLEAdvertiseData.cpp  BluetoothLEAdvertiseData.h  BluetoothLEDevice.cpp  BluetoothLEDevice.h  (+64 more)
src/Common/: ArgumentValidator.cpp  ArgumentValidator.h  AsyncCallbackManager.cpp  AsyncCallbackManager.h  CMakeLists.txt  CallbackUserData.cpp  CallbackUserData.h  DBusOperation.cpp  DBusOperation.h  Export.h  GlobalContextManager.cpp  GlobalContextManager.h  IListenerManager.h  JSArray.cpp  JSArray.h  JSStringRefWrapper.cpp  JSStringRefWrapper.h  JSTizenSecurityObject.cpp  JSTizenSecurityObject.h  JSUtil.cpp  JSUtil.h  JSVector.h  JSWebAPIError.cpp  JSWebAPIError.h  JSWebAPIErrorFactory.cpp  JSWebAPIErrorFactory.h  JSWebAPIException.cpp  JSWebAPIException.h  Logger.h  MultiCallbackUserData.cpp  MultiCallbackUserData.h  OldIListenerManager.h  PlatformException.cpp  PlatformException.h  PropertyBag.cpp  PropertyBag.h  Security.h  SecurityAccessor.cpp  SecurityAccessor.h  SecurityExceptions.h  (+5 more)
src/Content/: AddBatchCallbackUserData.cpp  AddBatchCallbackUserData.h  AudioContent.cpp  AudioContent.h  AudioContentLyrics.cpp  AudioContentLyrics.h  AudioLyricsUtil.cpp  AudioLyricsUtil.h  BaseCallbackUserData.cpp  BaseCallbackUserData.h  CMakeLists.txt  Content.cpp  Content.h  ContentCallback.cpp  ContentCallback.h  ContentChangeCallback.cpp  ContentChangeCallback.h  ContentDirectory.cpp  ContentDirectory.h  ContentFilterQueryGenerator.cpp  ContentFilterQueryGenerator.h  ContentFindCallback.h  ContentGetDirectoryCallback.h  ContentHelper.cpp  ContentHelper.h  ContentManager.cpp  ContentManager.h  ContentScanFileCallback.h  ContentTypes.h  ContentUpdateBatchCallback.h  ContentUtility.cpp  ContentUtility.h  CreatePlaylistCallbackUserData.cpp  CreatePlaylistCallbackUserData.h  GetPlaylistItemsRequest.cpp  GetPlaylistItemsRequest.h  GetPlaylistsRequest.cpp  GetPlaylistsRequest.h  ImageContent.cpp  ImageContent.h  (+45 more)
src/Download/: CMakeLists.txt  DownloadCallback.cpp  DownloadCallback.h  DownloadManager.cpp  DownloadManager.h  DownloadNetworkType.h  DownloadRequest.cpp  DownloadRequest.h  DownloadState.h  DownloadUtil.cpp  DownloadUtil.h  JSDownloadManager.cpp  JSDownloadManager.h  JSDownloadRequest.cpp  JSDownloadRequest.h  config.xml  plugin_config.cpp  plugin_config.h  plugin_config_impl.h  plugin_initializer.cpp
src/Exif/: CMakeLists.txt  ExifGPSTime.cpp  ExifInformation.cpp  ExifManager.cpp  ExifManager.h  ExifManagerCallbacks.h  ExifTagSaver.cpp  JSExifInformation.cpp  JSExifInformation.h  JSExifManager.cpp  JSExifManager.h  JpegFile.cpp  Rational.cpp  config.xml  plugin_config.cpp  plugin_config.h
src/Filesystem/: CMakeLists.txt  Converter.cpp  Converter.h  Encodings.cpp  Encodings.h  Enums.h  EventCopy.cpp  EventCopy.h  EventGetStorage.cpp  EventGetStorage.h  EventListNodes.cpp  EventListNodes.h  EventListStorages.cpp  EventListStorages.h  EventMove.cpp  EventMove.h  EventOpen.cpp  EventOpen.h  EventReadText.h  EventRemove.cpp  EventRemove.h  EventResolve.cpp  EventResolve.h  EventStorageStateChanged.cpp  EventStorageStateChanged.h  File.cpp  File.h  FilesystemErrorUtil.cpp  FilesystemErrorUtil.h  FilesystemExternalUtils.cpp  FilesystemExternalUtils.h  FilesystemPathUtils.cpp  FilesystemPathUtils.h  FilesystemUtils.cpp  FilesystemUtils.h  JSErrors.cpp  (+29 more)
(+481 files in other folders)
