SET(TARGET_NAME ${archive_target})
SET(DESTINATION_NAME ${archive_dest})
SET(TARGET_IMPL_NAME ${archive_impl})
SET(TARGET_CONFIG_NAME ${archive_config})

PKG_CHECK_MODULES(platform_pkgs_archive REQUIRED minizip)

ADD_DEFINITIONS("-fvisibility=hidden")

SET(INCLUDE_DIRS
    ${filesystem_include}
    ${platform_pkgs_archive_INCLUDE_DIRS}
)

INCLUDE_DIRECTORIES(${INCLUDE_COMMON} ${INCLUDE_DIRS})
MESSAGE(STATUS "${TARGET_NAME} module includes: INCLUDE_COMMON ${INCLUDE_DIRS}")

SET(CMAKE_INSTALL_RPATH
    ${CMAKE_INSTALL_RPATH}
    ${CMAKE_INSTALL_PREFIX}/${DESTINATION_LIB_PREFIX}/${filesystem_dest}
    ${CMAKE_INSTALL_PREFIX}/${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME}
)

SET(SRCS_IMPL
    JSArchiveManager.cpp
    JSArchiveFile.cpp
    JSArchiveFileEntry.cpp
    ArchiveCallbackData.cpp
    ArchiveManager.cpp
    ArchiveFile.cpp
    ArchiveFileEntry.cpp
    Zip.cpp
    UnZip.cpp
    UnZipExtractRequest.cpp
    ArchiveUtils.cpp
    ZipAddRequest.cpp
)

ADD_LIBRARY(${TARGET_IMPL_NAME} SHARED ${SRCS_IMPL})


SET(LINK_LIBS
    ${filesystem_impl}
    ${filesystem_config}
    ${platform_pkgs_tizen_LIBRARIES}
)

TARGET_LINK_LIBRARIES(${TARGET_IMPL_NAME} ${LIBS_COMMON} ${LINK_LIBS})
MESSAGE(STATUS "${TARGET_NAME} module links: LIBS_COMMON ${LINK_LIBS}")

SET(SRCS_CONFIG
    plugin_config.cpp
)

ADD_LIBRARY(${TARGET_CONFIG_NAME} SHARED ${SRCS_CONFIG})

TARGET_LINK_LIBRARIES(${TARGET_CONFIG_NAME}
    ${LIBS_COMMON}
)

SET(SRCS
    plugin_initializer.cpp
)

ADD_LIBRARY(${TARGET_NAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${TARGET_NAME}
    ${TARGET_IMPL_NAME}
    ${TARGET_CONFIG_NAME}
)

INSTALL(TARGETS ${TARGET_NAME} ${TARGET_CONFIG_NAME} ${TARGET_IMPL_NAME} LIBRARY DESTINATION ${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config.xml DESTINATION ${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME})
INSTALL(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${DESTINATION_HEADER_PREFIX}/archive
    FILES_MATCHING PATTERN "*.h" PATTERN "CMakeFiles" EXCLUDE
)
